# -crewai-basic-projects

agentic design patterens(crewai)/routing/: pyproject.toml
agentic design patterens(crewai)/routing/crewai projects/project01/: pyproject.toml
agentic design patterens(crewai)/routing/src/routing/: __init__.py  main.py
agentic design patterns(crewai)/01prompt_chaining/src/project01/: main.py
agentic design patterns(crewai)/02routing/: README.md  requirements.txt
crewai projects/project01/: README.md
crewai projects/project01/src/project01/: blog_post.txt
