[project]
name = "project01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rehan Ahmed", email = "rehan007313@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.102.0",
    "litellm>=1.60.2",
    "python-dotenv>=1.0.1",
]

[project.scripts]
project01 = "project01:main"
piaic = "project01.main:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
